syntax = "proto3";

package node;

option go_package = "proto/node;node";

service Node {
  rpc Join(MembershipChangeRequest) returns (MembershipChangeResponse);
  rpc Leave(MembershipChangeRequest) returns (MembershipChangeResponse);
  rpc NotifyRebuild(RebuildRequest) returns (RebuildResponse);
  rpc NotifyRebuildComplete(RebuildRequest) returns (RebuildResponse);
}

message MembershipChangeRequest {
  string id = 1;
  string addr = 2;
}

message MembershipChangeResponse {
  repeated Peer peers = 1;
  bool success = 2;
}

enum Reason {
  JOIN = 0;
  LEAVE = 1;
}

message RebuildRequest {
  string id = 1;
  string addr = 2;
  Reason reason = 3;
}

message RebuildResponse {
  bool success = 1;
}

message Peer {
  string id = 1;
  string addr = 2;
}